
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


typedef int zval ;
typedef int zend_string ;
struct pdo_bound_param_data {int paramno; int parameter; int param_type; int name; int is_param; } ;
typedef int php_stream ;
struct TYPE_6__ {int dbh; int executed; scalar_t__ driver_data; } ;
typedef TYPE_1__ pdo_stmt_t ;
struct TYPE_7__ {int done; int stmt; } ;
typedef TYPE_2__ pdo_sqlite_stmt ;
typedef enum pdo_param_event { ____Placeholder_pdo_param_event } pdo_param_event ;


 int IS_NULL ;
 int IS_RESOURCE ;







 int PDO_PARAM_TYPE (int ) ;
 int PHP_STREAM_COPY_ALL ;
 int SQLITE_OK ;
 int SQLITE_STATIC ;
 int * ZSTR_EMPTY_ALLOC () ;
 int ZSTR_VAL (int ) ;
 int ZVAL_STR (int *,int *) ;
 int Z_ISREF (int ) ;
 int Z_LVAL_P (int *) ;
 int * Z_REFVAL (int ) ;
 int Z_STRLEN_P (int *) ;
 int Z_STRVAL_P (int *) ;
 int Z_TYPE_P (int *) ;
 int convert_to_long (int *) ;
 int pdo_raise_impl_error (int ,TYPE_1__*,char*,char*) ;
 int pdo_sqlite_error_stmt (TYPE_1__*) ;
 int * php_stream_copy_to_mem (int *,int ,int ) ;
 int php_stream_from_zval_no_verify (int *,int *) ;
 int sqlite3_bind_blob (int ,int ,int ,int ,int ) ;
 int sqlite3_bind_int (int ,int ,int ) ;
 int sqlite3_bind_int64 (int ,int ,int ) ;
 int sqlite3_bind_null (int ,int ) ;
 int sqlite3_bind_parameter_index (int ,int ) ;
 int sqlite3_bind_text (int ,int ,int ,int ,int ) ;
 int sqlite3_reset (int ) ;
 int try_convert_to_string (int *) ;
 int zval_ptr_dtor (int *) ;

__attribute__((used)) static int pdo_sqlite_stmt_param_hook(pdo_stmt_t *stmt, struct pdo_bound_param_data *param,
  enum pdo_param_event event_type)
{
 pdo_sqlite_stmt *S = (pdo_sqlite_stmt*)stmt->driver_data;
 zval *parameter;

 switch (event_type) {
  case 133:
   if (stmt->executed && !S->done) {
    sqlite3_reset(S->stmt);
    S->done = 1;
   }

   if (param->is_param) {

    if (param->paramno == -1) {
     param->paramno = sqlite3_bind_parameter_index(S->stmt, ZSTR_VAL(param->name)) - 1;
    }

    switch (PDO_PARAM_TYPE(param->param_type)) {
     case 129:
      return 0;

     case 130:
      if (sqlite3_bind_null(S->stmt, param->paramno + 1) == SQLITE_OK) {
       return 1;
      }
      pdo_sqlite_error_stmt(stmt);
      return 0;

     case 132:
     case 134:
      if (Z_ISREF(param->parameter)) {
       parameter = Z_REFVAL(param->parameter);
      } else {
       parameter = &param->parameter;
      }
      if (Z_TYPE_P(parameter) == IS_NULL) {
       if (sqlite3_bind_null(S->stmt, param->paramno + 1) == SQLITE_OK) {
        return 1;
       }
      } else {
       convert_to_long(parameter);





       if (SQLITE_OK == sqlite3_bind_int(S->stmt, param->paramno + 1, Z_LVAL_P(parameter))) {
        return 1;
       }

      }
      pdo_sqlite_error_stmt(stmt);
      return 0;

     case 131:
      if (Z_ISREF(param->parameter)) {
       parameter = Z_REFVAL(param->parameter);
      } else {
       parameter = &param->parameter;
      }
      if (Z_TYPE_P(parameter) == IS_RESOURCE) {
       php_stream *stm = ((void*)0);
       php_stream_from_zval_no_verify(stm, parameter);
       if (stm) {
        zend_string *mem = php_stream_copy_to_mem(stm, PHP_STREAM_COPY_ALL, 0);
        zval_ptr_dtor(parameter);
        ZVAL_STR(parameter, mem ? mem : ZSTR_EMPTY_ALLOC());
       } else {
        pdo_raise_impl_error(stmt->dbh, stmt, "HY105", "Expected a stream resource");
        return 0;
       }
      } else if (Z_TYPE_P(parameter) == IS_NULL) {
       if (sqlite3_bind_null(S->stmt, param->paramno + 1) == SQLITE_OK) {
        return 1;
       }
       pdo_sqlite_error_stmt(stmt);
       return 0;
      } else {
       if (!try_convert_to_string(parameter)) {
        return 0;
       }
      }

      if (SQLITE_OK == sqlite3_bind_blob(S->stmt, param->paramno + 1,
        Z_STRVAL_P(parameter),
        Z_STRLEN_P(parameter),
        SQLITE_STATIC)) {
       return 1;
      }
      return 0;

     case 128:
     default:
      if (Z_ISREF(param->parameter)) {
       parameter = Z_REFVAL(param->parameter);
      } else {
       parameter = &param->parameter;
      }
      if (Z_TYPE_P(parameter) == IS_NULL) {
       if (sqlite3_bind_null(S->stmt, param->paramno + 1) == SQLITE_OK) {
        return 1;
       }
      } else {
       if (!try_convert_to_string(parameter)) {
        return 0;
       }
       if (SQLITE_OK == sqlite3_bind_text(S->stmt, param->paramno + 1,
         Z_STRVAL_P(parameter),
         Z_STRLEN_P(parameter),
         SQLITE_STATIC)) {
        return 1;
       }
      }
      pdo_sqlite_error_stmt(stmt);
      return 0;
    }
   }
   break;

  default:
   ;
 }
 return 1;
}
